# tasty-integrate

./: LICENSE  README.md  tasty-integrate.cabal
ide-format/: Main.hs
ide-format/Text/Parsec/: Extra.hs
src/: Main.hs
src/Data/: AesonData.hs  Integrated.hs  ModulePath.hs  Path.hs  Property.hs  Suite.hs
src/Data/Integrated/: IOState.hs  Partition.hs  TestModule.hs
src/Data/String/: Indent.hs
src/Data/Suite/: Ops.hs
src/Source/: ImportDecl.hs
src/System/IO/: Util.hs
src/Test/: Util.hs
test-suites/: Suite.hs
tests/: Env.hs  Util.hs
tests/Arbitrary/: DirPath.hs  FS.hs  File.hs  FilePath.hs  ModulePath.hs  Properties.hs  Suite.hs  TestFS.hs  TestModule.hs
tests/Data/: QcIntegrated.hs  QcSuite.hs
tests/Util/: Invariants.hs
