name:                tasty-integrate 
version:             0.0.1
synopsis:            automated integration of QuickCheck properties into tasty suites 
license:             BSD3
license-file:        LICENSE
author:              John P. Feltz
maintainer:          jfeltz@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.8

executable ide-format
  main-is: Main.hs
  build-depends: base >=4.5 && <=4.6.0.1, 
                 unix,
                 parsec >= 3.1.5,
                 system-filepath >= 0.4.9,
                 text
  hs-source-dirs: ide-format, src

executable tasty-integrate
  main-is:           Main.hs 
  build-depends:     base >=4.5 && <=4.6.0.1, 
                     containers,
                     transformers,
                     directory,
                     cmdargs == 0.10.2,
                     system-filepath >= 0.4.6,
                     language-haskell-extract,
                     haskell-src-exts,
                     regex-posix,
                     split,
                     mtl,
                     text,
                     either,
                     lens,
                     aeson == 0.6.2.1,
                     bytestring == 0.10.2.0

  ghc-options:       -Wall -rtsopts
  hs-source-dirs:    src

test-suite suite 
  type: exitcode-stdio-1.0
  buildable: True
  build-depends: base >=4.5 && <=4.6.0.1, 
                 deepseq == 1.3.0.1,
                 stm == 2.4.2,
                 QuickCheck == 2.6, 
                 tasty == 0.7,
                 tasty-quickcheck,
                 containers,
                 transformers,
                 directory,
                 system-filepath >= 0.4.6,
                 quickcheck-property-comb,
                 stringbuilder,
                 lens,
                 mtl,
                 split,
                 text,
                 regex-posix,
                 haskell-src-exts,
                 bytestring == 0.10.2.0
                 
  ghc-options:   -Wall -rtsopts -fno-warn-unused-do-bind
  hs-source-dirs: tests, src, test-suites
  main-is: Suite.hs
